[package]
name = "planck-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-device = { version = "0.4", features = ["rt", "atmega32u4"] }
avr-std-stub = "1.0"
atmega-usbd = { git = "https://github.com/agausmann/atmega-usbd.git" }
usb-device = "0.2"
usbd-hid = "0.6"
embedded-hal = "0.2"

[dependencies.atmega-hal]
git = "https://github.com/Rahix/avr-hal.git"
branch = "main"
features = ["atmega32u4"]

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
opt-level = "s"
lto = true